# sn-gamestate

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
experiments/: download.py
plugins/calibration/: pyproject.toml
sn_gamestate/configs/visualization/: colors_gs.yaml  gamestate.yaml
sn_gamestate/visualization/: __init__.py  pitch.py  pitch_visualization.py  players.py
