[project]
name = "sn-gamestate"
version = "0.2.0"
description = "A baseline and framework for the SoccerNet Game State Reconstruction Challenge"
readme = "README.md"

[tool.poetry]
name = "sn-gamestate"
version = "0.2.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "sn_gamestate"}]

[tool.poetry.dependencies]
python = "^3.9"
tracklab = "^1.3" # {path = "../tracklab", develop = true}
easyocr = "^1.7.1"
soccernet = "^0.1.55"
torch = "1.13.1"
tracklab-calibration = {path = "plugins/calibration", develop = true}
prtreid = {git = "https://github.com/VlSomers/prtreid"}
mmocr = "^1.0.1"
mmdet = "~3.1.0"
openmim = "^0.3.9"
torchreid = {git = "https://github.com/VlSomers/bpbreid"}
# mmpose = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.tracklab_plugin]
soccernet = "sn_gamestate.config_finder:ConfigFinder"
