[project]
name = "sn-gamestate"
version = "0.2.0"
description = "A Baseline and Framework for the SoccerNet Game State Reconstruction Challenge"
readme = "README.md"
requires-python = ">=3.9,<3.10"

dependencies = [
    "tracklab",
    "easyocr==1.7.1",
    "soccernet==0.1.55",
    "torch==1.13.1",
    "prtreid @ git+https://github.com/VlSomers/prtreid",
    "mmocr==1.0.1",
    "mmdet~=3.1.0",
    "openmim==0.3.9",
    "torchreid @ git+https://github.com/VlSomers/bpbreid",
    "tracklab_calibration"
]

[project.entry-points.tracklab_plugin]
sn_gamestate = "sn_gamestate.config_finder:ConfigFinder"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sn_gamestate*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.yaml"]

[project.optional-dependencies]
dev = ["ipykernel==6.29.4"]

[tool.uv.sources]
tracklab-calibration = { path = "plugins/calibration", editable = true }
