[project]
name = "tracklab-calibration"
version = "1.0.2"
description = ""
authors = [
    {name="Victor Joos", email="victor.joos@uclouvain.be"}
]
requires-python = ">=3.9,<3.10"
dependencies = [
    "kornia==0.6.3",
    "lsq-ellipse>=2.2.1"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sn_calibration_baseline", "tvcalib", "nbjw_calib"]
